k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ssp-namespace
  labels:
    name: ssp-namespace
---
apiVersion: v1
kind: Namespace
metadata:
  name: bidder-app
  labels:
    name: bidder-app
