k8s/bidder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bidder
  namespace: bidder-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bidder
  template:
    metadata:
      labels:
        app: bidder
        network-policy: bidder-network-policy
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10000
        fsGroup: 20000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: bidder
          image: ${AWS_ACCOUNT_ID}.dkr.ecr.us-east-1.amazonaws.com/cloudx-app-repo:latest
          imagePullPolicy: Always
          args: ["./server", "bidder", "8092"]
          ports:
            - containerPort: 8092
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 10000
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
