k8s/bidder-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bidder
  namespace: bidder-app
spec:
  type: ClusterIP
  selector:
    app: bidder
  ports:
    - port: 8092
      targetPort: 8092
