k8s/ssp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssp
  namespace: ssp-namespace
spec:
  type: LoadBalancer
  selector:
    app: ssp
  ports:
    - port: 80
      targetPort: 8091
